bug/scheduler-classcard-nowrap

--- a/apps/frontend/src/components/ClassCard/ClassCard.module.scss
+++ b/apps/frontend/src/components/ClassCard/ClassCard.module.scss
@@ -1,3 +1,7 @@
 .sectionNumber {
   color: var(--paragraph-color);
 }
+
+.description {
+  white-space: normal;
+}
